feat: Implement JWT authentication with Keycloak integration
- Add getToken() and refreshToken() methods to KeycloakService
- Update signup to return actual JWT from Keycloak
- Update login to validate credentials via Keycloak and return JWT
- First user gets all 3 roles (ADMIN, MANAGER, PORTAL)
- Set custom claims in Keycloak: tenant_id, user_id, company_ids, current_company_id
- Parse roles from DB comma-separated field
- Implement token refresh endpoint

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>